--- a/index.html
+++ b/index.html
@@ -134,14 +134,19 @@
             color: #666;
         }
     
-        .table-wrapper {
+        /* Responsive tweaks */
+        .table-container {
             overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
         }
-        table {
-            width: 100%;
+        @media (max-width: 600px) {
+            body { margin: 10px; }
+            h1 { font-size: 24px; padding: 15px; }
+            h2 { font-size: 18px; margin-bottom: 20px; }
+            table { font-size: 14px; }
+            th, td { padding: 10px; }
         }
-    
-</style>
+    </style>
 </head>
 <body>
     <div class="container">
@@ -149,7 +154,8 @@
         <h2>For Four People</h2>
 
         <!-- Day 1 -->
-        <div class='table-wrapper'><table>
+        <div class="table-container">
+<table>
             <tr class="day-header day1">
                 <td colspan="5">Day 1: June 21 (Saturday)</td>
             </tr>
@@ -188,10 +194,12 @@
                 <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
                 <td>Houses of Parliament after the House of Commons & the House of Lords, the two legislative chambers which occupy the building.</td>
             </tr>
-        </table></div>
+        </table>
+</div>
 
         <!-- Day 2 -->
-        <div class='table-wrapper'><table>
+        <div class="table-container">
+<table>
             <tr class="day-header day2">
                 <td colspan="5">Day 2: June 22 (Sunday)</td>
             </tr>
@@ -223,10 +231,12 @@
                 <td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
                 <td>Discover exhibits on dinosaurs, human evolution, and more.</td>
             </tr>
-        </table></div>
+        </table>
+</div>
 
         <!-- Day 3 -->
-        <div class='table-wrapper'><table>
+        <div class="table-container">
+<table>
             <tr class="day-header day3">
                 <td colspan="5">Day 3: June 23 (Monday)</td>
             </tr>
@@ -265,10 +275,12 @@
                 <td>-</td>
                 <td>Peaceful canal walk & picturesque views.</td>
             </tr>
-        </table></div>
+        </table>
+</div>
 
         <!-- Day 4 -->
-        <div class='table-wrapper'><table>
+        <div class="table-container">
+<table>
             <tr class="day-header day4">
                 <td colspan="5">Day 4: June 24 (Tuesday)</td>
             </tr>
@@ -300,10 +312,12 @@
                 <td>-</td>
                 <td>Explore Portobello Road Market Lancaster Rd.</td>
             </tr>
-        </table></div>
+        </table>
+</div>
 
         <!-- Day 5 -->
-        <div class='table-wrapper'><table>
+        <div class="table-container">
+<table>
             <tr class="day-header day5">
                 <td colspan="5">Day 5: June 25 (Wednesday)</td>
             </tr>
@@ -342,7 +356,8 @@
                 <td>11:00 AM – 5:00 PM (Monday to Friday)</td>
                 <td>Explore the life and work of Dr. B.R. Ambedkar.</td>
             </tr>
-        </table></div>
+        </table>
+</div>
     </div>
     <div class="container">
         <h2>Additional Links</h2>
