--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <li><a href="https://www.bigbustours.com/en/london/london-river-cruises" target="_blank">Big Bus London River Cruises</a></li>
 			<li><a href="https://maps.app.goo.gl/ZbJW7WWEUfWfjC1fA" target="_blank">Regent St.</a></li>
 			<li><a href="https://maps.app.goo.gl/BBWop54WVbjvNkUx5" target="_blank">Millennium Bridge</a></li>
+			<li><a href="https://maps.app.goo.gl/W7ctA5JPYHkBvJ2v8" target="_blank">Camden Market</a></li>
         </ul>
     </div>
 	<div class="footer">
