--- a/index.html
+++ b/index.html
@@ -159,24 +159,35 @@
                 <td>9:00 AM – 5:30 PM (last admission 4:30 PM)</td>
                 <td>Explore the historic castle, Crown Jewels, and Yeoman Warders.</td>
             </tr>
+
+	<tr class="day1-row">
+                <td><a href="https://maps.app.goo.gl/LcxSf2hx8zLRtRyS9" target="_blank">Tower Bridge Rd</a></td>
+                <td>12:30 PM – 1:00 PM</td>
+                <td>40-minute walk</td>
+                <td>Open</td>
+                <td>Experience panoramic views of London from the Tower Bridge.</td>
+            </tr>
+
             <tr class="day1-row">
                 <td><a href="https://maps.app.goo.gl/bweu8EPN6uR8MZNu6" target="_blank">Borough Market</a></td>
-                <td>If time permits</td>
-                <td>30-minute walk</td>
+                <td>1:30 PM – 2:30 PM</td>
+                <td>20-minute walk</td>
                 <td>9:00 AM – 5:00 PM</td>
                 <td>Enjoy a variety of food stalls and local delicacies.</td>
             </tr>
-            <tr class="day1-row">
-                <td><a href="https://maps.app.goo.gl/uKbZLzS5PK8eAzRX7" target="_blank">The View from The Shard</a></td>
-                <td>1:30 PM – 2:30 PM</td>
-                <td>20-minute walk</td>
-                <td>10:00 AM – 10:00 PM (last entry 9:00 PM)</td>
-                <td>Experience panoramic views of London from the observation deck.</td>
+
+	<tr class="day1-row">
+                <td><a href="https://maps.app.goo.gl/VumTodo5UxpHsEZWA" target="_blank">Regent St.</a></td>
+                <td>3:00 PM – 3:40 PM</td>
+                <td>40-minute walk</td>
+                <td>Open</td>
+                <td>Experience panoramic views of London from the Tower Bridge.</td>
             </tr>
+		
             <tr class="day1-row">
                 <td><a href="https://maps.app.goo.gl/fM4ffnn9NAJarrpe7" target="_blank">Palace of Westminster</a></td>
-                <td>4:00 PM – 4:45 PM</td>
-                <td>30-minute travel</td>
+                <td>4:00 PM – 4:15 PM</td>
+                <td>40-minute walk</td>
                 <td>9:00 AM – 4:15 PM (last entry 4:15 PM)</td>
                 <td>Houses of Parliament after the House of Commons & the House of Lords, the two legislative chambers which occupy the building.</td>
             </tr>
