--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <td>3:00 PM – 3:40 PM</td>
                 <td>40-minute walk</td>
                 <td>Open</td>
-                <td>Experience panoramic views of London from the Tower Bridge.</td>
+                <td>Experience regal buildings, iconic black cabs, and bustling ambiance.</td>
             </tr>
 		
             <tr class="day1-row">
