--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	<tr class="day1-row">
                 <td><a href="https://maps.app.goo.gl/VumTodo5UxpHsEZWA" target="_blank">Regent St.</a></td>
                 <td>3:00 PM – 3:40 PM</td>
-                <td>40-minute walk</td>
+                <td>40-minute Travel</td>
                 <td>Open</td>
                 <td>Experience regal buildings, iconic black cabs, and bustling ambiance.</td>
             </tr>
