--- a/index.html
+++ b/index.html
@@ -282,20 +282,23 @@
                 <th>Opening Hours</th>
                 <th>Highlights</th>
             </tr>
-            <tr class="day4-row">
-                <td><a href="https://maps.app.goo.gl/2UBFx7GzXmYPcuE79" target="_blank">Thames River Cruise</a></td>
-                <td>10:00 AM</td>
-                <td>Hop on Hop off (Stop #16) to Westminster Pier</td>
-                <td>-</td>
-                <td>View landmarks like Tower Bridge and the Shard from the river.</td>
-            </tr>
+            
             <tr class="day4-row">
                 <td><a href="https://maps.app.goo.gl/Hc9BxYN7G6PcEnPw7" target="_blank">London Eye</a></td>
-                <td>12:30 PM – 1:30 PM</td>
-                <td>10-minute walk</td>
-                <td>11:00 AM – 6:00 PM</td>
+                <td>10:00 AM – 11:30 AM</td>
+                <td>-</td>
+                <td>10:00 AM – 5:00 PM</td>
                 <td>Experience panoramic views of London from the giant Ferris wheel.</td>
             </tr>
+
+	<tr class="day4-row">
+                <td><a href="https://maps.app.goo.gl/2UBFx7GzXmYPcuE79" target="_blank">Thames River Cruise</a></td>
+                <td>12:00 PM - 1.00 PM</td>
+                <td>Hop on Hop off SW1A 2JH (Stop #18) to Tower Pier EC3N 4DT</td>
+                <td>10:00 AM – 5:00</td>
+                <td>View landmarks like Tower Bridge and the Shard from the river.</td>
+            </tr>
+		
             <tr class="day4-row">
                 <td><a href="https://maps.app.goo.gl/6BPH3Z269joYaSA36" target="_blank">Hop on Hop off & Notting Hill</a></td>
                 <td>2:30 PM – 6:00 PM</td>
