--- a/index.html
+++ b/index.html
@@ -240,30 +240,32 @@
                 <th>Opening Hours</th>
                 <th>Highlights</th>
             </tr>
+            
+	<tr class="day3-row">
+                <td><a href="https://maps.app.goo.gl/NcRKrri8ey6ntpQa8" target="_blank">St. Paul's Cathedral</a></td>
+                <td>8:30 AM – 10:00 AM</td>
+                <td>-</td>
+                <td>8:30 AM – 4:00 PM (last entry 4:00 PM)</td>
+                <td>Explore the iconic dome and crypt.</td>
+            </tr>
+		
+            <tr class="day3-row">
+                <td><a href="https://maps.app.goo.gl/9vo46LGErMH6TtDk6" target="_blank">Horse Guards Parade</a></td>
+                <td>10:45 AM – 12:30 PM</td>
+                <td>20-minute Travel</td>
+                <td></td>
+                <td>Witness the Changing of the Guard ceremony.</td>
+            </tr>
             <tr class="day3-row">
                 <td><a href="https://maps.app.goo.gl/NVKSzQVuGLTHicjr8" target="_blank">Westminster Abbey</a></td>
-                <td>9:30 AM – 11:00 AM</td>
-                <td>-</td>
+                <td>1:00 PM – 3:30 PM</td>
+                <td>15-minute walk</td>
                 <td>9:30 AM – 3:30 PM (last entry 3:00 PM)</td>
                 <td>Visit the historic church known for royal ceremonies.</td>
             </tr>
             <tr class="day3-row">
-                <td><a href="https://maps.app.goo.gl/9vo46LGErMH6TtDk6" target="_blank">Horse Guards Parade</a></td>
-                <td>11:15 AM – 12:30 PM</td>
-                <td>10-minute walk</td>
-                <td>-</td>
-                <td>Witness the Changing of the Guard ceremony.</td>
-            </tr>
-            <tr class="day3-row">
-                <td><a href="https://maps.app.goo.gl/NcRKrri8ey6ntpQa8" target="_blank">St. Paul's Cathedral</a></td>
-                <td>1:30 PM – 3:30 PM</td>
-                <td>15-minute travel</td>
-                <td>8:30 AM – 4:30 PM (last entry 4:00 PM)</td>
-                <td>Explore the iconic dome and crypt.</td>
-            </tr>
-            <tr class="day3-row">
                 <td><a href="https://maps.app.goo.gl/dmvmfJny2yHFygZ89" target="_blank">Little Venice</a></td>
-                <td>4:00 PM – 5:30 PM</td>
+                <td>3:30 PM – 5:30 PM</td>
                 <td>30-minute travel</td>
                 <td>-</td>
                 <td>Peaceful canal walk & picturesque views.</td>
