--- a/index.html
+++ b/index.html
@@ -213,15 +213,24 @@
                 <td>Capture iconic views of the London Eye, Big Ben, & the Thames.</td>
             </tr>
             <tr class="day2-row">
-                <td><a href="https://maps.app.goo.gl/tfLnHkmEzhvgRG6NA" target="_blank">London Zoo & Regent's Park</a></td>
-                <td>10:30 AM – 1:30 PM</td>
+                <td><a href="https://maps.app.goo.gl/tfLnHkmEzhvgRG6NA" target="_blank">Regent's Park & London Zoo</a></td>
+                <td>10:30 AM – 1:00 PM</td>
                 <td>45-minute travel</td>
                 <td>10:00 AM – 6:00 PM (last admission 5:00 PM)</td>
                 <td>Explore diverse animal exhibits and interactive displays.</td>
             </tr>
+
+	<tr class="day2-row">
+                <td><a href="https://maps.app.goo.gl/y9W94Xkcv4wvxyy18" target="_blank">Camden Market</a></td>
+                <td>1:00 PM – 3:00 PM</td>
+                <td>20-Minute Walk</td>
+                <td>-</td>
+                <td>Explore unique combination of alternative fashion, street food, live music, and a vibrant cultural atmosphere.</td>
+            </tr>
+		
             <tr class="day2-row">
                 <td><a href="https://maps.app.goo.gl/njXNEYrf8YTnzbNK6" target="_blank">Natural History Museum</a></td>
-                <td>3:00 PM – 5:30 PM</td>
+                <td>4:00 PM – 5:30 PM</td>
                 <td>45-minute travel</td>
                 <td>10:00 AM – 5:50 PM (last entry 5:30 PM)</td>
                 <td>Discover exhibits on dinosaurs, human evolution, and more.</td>
