--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
         <h2>Additional Links</h2>
         <ul style="font-size: 16px; color: #333;">
 			<li><a href="https://maps.app.goo.gl/GiUBTC1nuNjNqvoK8" target="_blank">Our Stay</a></li>
+		<li><a href="https://maps.app.goo.gl/ZimXBWd3P2PgabJg8" target="_blank">Kyoto Garden-Visit on 20th June</a></li>
             <li><a href="https://www.bigbustours.com/en/london/blue-route-london" target="_blank">Big Bus Blue Route Timetable</a></li>
             <li><a href="https://www.bigbustours.com/en/london/red-route-london" target="_blank">Big Bus Red Route Timetable</a></li>
             <li><a href="https://www.bigbustours.com/en/london/london-river-cruises" target="_blank">Big Bus London River Cruises</a></li>
