--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         </ul>
     </div>
 	<div class="footer">
-    <p>Created by Amit</p>
+    <p>From Amit, with Love for the UK</p>
 </div>
 </body>
 </html>
